--- a/src/components/SearchProperty.css
+++ b/src/components/SearchProperty.css
@@ -1136,12 +1136,15 @@ font-size: 1.75rem;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
+  
 }
 .footer-tagline {
   font-size: 1rem;
   color: #a0aec0;
   margin: 0;
   font-style: italic;
+  margin-top: -10px;
+  
 }
 /* Footer Links */
 .footer-links {
